# reza

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  pyproject.toml
.reza/: context.db
docs/superpowers/plans/: 2026-04-10-session-continuity.md  2026-04-15-universal-memory-platform-masterplan.md
docs/superpowers/specs/: 2026-04-10-reza-session-continuity-design.md  2026-04-12-universal-sync-design.md
extensions/: package.json
extensions/reza-vscode/: .vscodeignore  README.md  build.js  package-lock.json  package.json  reza-vscode-0.1.0.vsix  reza-vscode-0.2.0.vsix  tsconfig.json
extensions/reza-vscode/src/: extension.ts  graphProvider.ts  rezaClient.ts  sessionOverlay.ts
extensions/reza-vscode/src/webview/: graph.html  graph.js
integrations/: README.md
integrations/aider/: README.md
integrations/claude-code/: SKILL.md
integrations/codeium/: README.md
integrations/codex/: README.md
integrations/continue/: README.md
integrations/cursor/: .cursorrules
integrations/github-copilot/: README.md
integrations/kilocode/: rules.md
npm/: .npmignore  README.md  package.json
npm/scripts/: postinstall.js
reza/: __init__.py  claim.py  claude_sync.py  cli.py  export.py  ingest.py  init_db.py  privacy.py  query.py  registry.py  schema.py  session.py  sessions_view.py  threads.py  turns.py  update.py  watcher.py
reza/adapters/: __init__.py  aider.py  base.py  codex.py  cursor.py  fallback.py
reza/context/: __init__.py  _budget.py  find.py  memory.py  neighbors.py  overview.py  pack.py  subtree.py
reza/graph/: __init__.py  builder.py  fast_index.py  impact.py  parser.py  py_ast_fast.py  store.py
reza/ingest/: __init__.py  _common.py  codex.py  cursor.py  files.py
scripts/: _clear_codex_working_on.py  _clear_imported_session_files.py  _smoke_session_graph.py  _smoke_session_list.py
tests/: test_claude_sync.py  test_cli_session.py  test_conflicts.py  test_context_api.py  test_graph_impact.py  test_graph_parser.py  test_graph_store.py  test_ingest.py  test_ingest_tools.py  test_init.py  test_query.py  test_session.py  test_turns.py  test_universal_memory.py
website/: .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.ts
website/app/: globals.css  layout.tsx  page.tsx
website/app/docs/: layout.tsx  page.tsx
website/app/docs/changelog/: page.tsx
website/app/docs/cli-reference/: page.tsx
website/app/docs/configuration/: page.tsx
website/app/docs/contributing/: page.tsx
website/app/docs/how-it-works/: page.tsx
website/app/docs/installation/: page.tsx
website/app/docs/integrations/: page.tsx
website/app/docs/integrations/aider/: page.tsx
website/app/docs/integrations/claude-code/: page.tsx
website/app/docs/integrations/codeium/: page.tsx
website/app/docs/integrations/codex/: page.tsx
website/app/docs/integrations/continue/: page.tsx
website/app/docs/integrations/copilot/: page.tsx
website/app/docs/integrations/cursor/: page.tsx
website/app/docs/integrations/kilocode/: page.tsx
website/app/docs/parallel-agents/: page.tsx
website/app/docs/quick-start/: page.tsx
website/app/docs/sessions/: page.tsx
website/app/docs/vscode-extension/: page.tsx
website/components/: CodeBlock.tsx  DocPage.tsx  Navbar.tsx  Sidebar.tsx  TableOfContents.tsx  ToolLogo.tsx
website/content/: CHANGELOG.md  README.md
website/content/integrations/: aider.md  codex.md  continue.md  kilocode.md
website/lib/: mdx.ts  nav.ts
