[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reza"
version = "0.1.0"
description = "Universal LLM context database — instant project awareness for Claude, Cursor, Codex, Aider, Kilocode and any AI coding tool"
authors = [
    {name = "Suweb Reza"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "llm", "context", "claude", "codex", "cursor", "aider", "kilocode",
    "ai-tools", "developer-tools", "sqlite", "project-awareness", "session"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "watchdog>=3.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
reza = "reza.cli:main"

[project.urls]
Homepage = "https://github.com/swebreza/reza"
Repository = "https://github.com/swebreza/reza"
Issues = "https://github.com/swebreza/reza/issues"
Changelog = "https://github.com/swebreza/reza/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["reza*"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "W", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
